--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DDBapi | Documentation of the Application Programming Interface (API)</title>
-    <link rel="stylesheet" type="text/css" href="/swagger-ui/swagger-ui.css">
+    <!-- Use relative paths so the app works under a subpath (e.g. /app/ddbapi/) -->
+    <base href="./">
+    <link rel="stylesheet" type="text/css" href="swagger-ui/swagger-ui.css">
     <style>
       html { box-sizing: border-box; overflow: -moz-scrollbars-vertical; }
       *, *:before, *:after { box-sizing: inherit; }
@@ -16,9 +18,9 @@
 
     <div id="swagger-ui"></div>
 
-    <script src="/swagger-ui/swagger-ui-bundle.js"></script>
-    <script src="/swagger-ui/swagger-ui-standalone-preset.js"></script>
-    <script src="/scripts/ddb-plugins.js"></script>
+    <script src="swagger-ui/swagger-ui-bundle.js"></script>
+    <script src="swagger-ui/swagger-ui-standalone-preset.js"></script>
+    <script src="scripts/ddb-plugins.js"></script>
     <script>
       (function () {
         const apiUrl = window.computeInitialApiUrl();
