feat: add responsive styles for download URL and enhance logging in server

--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DDBapi | Documentation of the Application Programming Interface (API)</title>
-    <!-- Use relative paths so the app works under a subpath (e.g. /app/ddbapi/) -->
-    <base href="./">
-    <link rel="stylesheet" type="text/css" href="swagger-ui/swagger-ui.css">
-    <style>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>DDBapi | Documentation of the Application Programming Interface
+            (API)</title>
+        <!-- Use relative paths so the app works under a subpath (e.g. /app/ddbapi/) -->
+        <base href="./">
+        <link rel="stylesheet" type="text/css" href="swagger-ui/swagger-ui.css">
+        <style>
       html { box-sizing: border-box; overflow: -moz-scrollbars-vertical; }
       *, *:before, *:after { box-sizing: inherit; }
       body { margin:0; background: #fafafa; }
     </style>
-  </head>
-  <body>
-    <!-- control bar is injected into Swagger UI via plugin -->
+    </head>
+    <body>
+        <!-- control bar is injected into Swagger UI via plugin -->
 
-    <div id="swagger-ui"></div>
+        <div id="swagger-ui"></div>
 
-    <script src="swagger-ui/swagger-ui-bundle.js"></script>
-    <script src="swagger-ui/swagger-ui-standalone-preset.js"></script>
-    <script src="scripts/ddb-plugins.js"></script>
-    <script>
+        <script src="swagger-ui/swagger-ui-bundle.js"></script>
+        <script src="swagger-ui/swagger-ui-standalone-preset.js"></script>
+        <script src="scripts/ddb-plugins.js"></script>
+        <script>
       (function () {
         const apiUrl = window.computeInitialApiUrl();
 
@@ -49,5 +50,5 @@
         });
       })();
     </script>
-  </body>
+    </body>
 </html>
